	- REMOVED: SetCameraAltControl.
	- REMOVED: SetCameraSmoothZoomControl.
	- REMOVED: SetCameraMoveControls.
	- REMOVED: DrawTextureTiled.
	- REMOVED: DrawTexturePoly.
	- REMOVED: DrawCubeTexture.
	- REMOVED: PlaySoundMulti.
	- REMOVED: StopSoundMulti.
	- REMOVED: GetSoundsPlaying.
	- CHANGED: UpdateCamera3D now takes int mode parameter. Same as UpdateCamera in raylib.
	- ADDED: UpdateCamera3DPro. Same as UpdateCameraPro in raylib.
	- ADDED: BLEND_CUSTOM_SEPARATE.
	- ADDED: Vector2LineAngle

------------------------------------------------------------------------
Release:	ReiLua version 0.4.0		Using Raylib 4.2
------------------------------------------------------------------------
KEY CHANGES:
	- ADDED: This changelog.
	- ADDED: Lua interpreter mode.
	- ADDED: Easings extra module.
	- ADDED: exit function.
	- FIXED: uluaGetNPatchInfo fix for RL_DrawTextureNPatch. Guess this was never tested and did not work at all >:E.
	- ADDED: Flag option (-s) for doc_parser.lua for exporting module APIs to separate files.
	- ADDED: ReiLuaGui.
	- ADDED: ReiLuaGui Examples.
	- ADDED: Draw Mesh Instanced Example.
	- CHANGED: RL_DrawQuad3DTexture now takes vertex colors instead of just single color.

Detailed changes:
	- ADDED: Help argument.
	- CHANGED: RL_rlSetLineWidth renamed to RL_rlglSetLineWidth.
	- CHANGED: RL_rlGetLineWidth renamed to RL_rlglGetLineWidth.
	- FIXED: DrawRectangleGradient V and H expecting wrong arguments.
	- ADDED: RL_LoadDirectoryFilesEx.
	- FIXED: RL_DrawLineBezierQuad was called RL_DrawLineBezier in API.
	- ADDED: Color lib.
	- FIXED: RL_DrawEllipse and RL_DrawEllipseLines expecting wrong arguments.
	- ADDED: RL_IsPathFile.
	- ADDED: RL_SetMaterialShader.
	- ADDED: RL_GetFileLength.
	- ADDED: RL_LoadFontEx.
	- FIXED: RL_ImageAlphaClear expecting wrong arguments.
	- ADDED: BLEND_ALPHA_PREMULTIPLY.
	- CHANGED: RL_GetWindowSize renamed to RL_GetScreenSize.
	- ADDED: RL_GetKeyName and RL_GetKeyScancode. GLFW Functions.
	- ADDED: KEY_UNKNOWN.