@@ -100,6 +100,9 @@ int ltexturesColorNormalize( lua_State *L );
 int ltexturesColorFromNormalized( lua_State *L );
 int ltexturesColorToHSV( lua_State *L );
 int ltexturesColorFromHSV( lua_State *L );
+int ltexturesColorTint( lua_State *L );
+int ltexturesColorBrightness( lua_State *L );
+int ltexturesColorContrast( lua_State *L );
 int ltexturesColorAlpha( lua_State *L );
 int ltexturesColorAlphaBlend( lua_State *L );
 int ltexturesGetColor( lua_State *L );
